Stop aligning titles on the center

--- a/src/app/screens/App/screens/Home/components/Book/styles.scss
+++ b/src/app/screens/App/screens/Home/components/Book/styles.scss
@@ -41,7 +41,6 @@ $book-width: 128px;
   font-family: Roboto-Bold;
   font-size: 14px;
   color: $black;
-  text-align: center;
   margin-top: 11px;
   font-weight: bold;
 }
